Test/serialization (#22)
* Add tests for DataVersionSerializer 

* Add tests for StringValidatorTest

* Modify TaskStorage

* Modify TaskSerializer and SerializationProperties

* Add @EqualsAndHashCode to DataVersion and Task models

* Add tests for TaskSerializer